# 2dfourier

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: CMakeLists.txt  decompf2d.h  example-driver.c  fourier-decomp.c  fourier-decomp.h
